# bytetrack-opencv-onnxruntime

./: README.md  requirements.txt
onnxruntime/: README.md
onnxruntime/cpp/: CMakeLists.txt
onnxruntime/cpp/src/: main.cpp
onnxruntime/python/: main.py
onnxruntime/python/byte_tracker/: byte_tracker_onnx.py
onnxruntime/python/byte_tracker/tracker/: byte_tracker.py
onnxruntime/python/byte_tracker/utils/: yolox_utils.py
opencv/: README.md
opencv/cpp/: CMakeLists.txt
opencv/cpp/src/: main.cpp
opencv/python/: main.py
opencv/python/byte_tracker/tracker/: matching.py
